# course_1_term_1_lab_1

./: CMakeLists.txt  README.md  generator.cpp  generator.h  main.cpp
_tests/: CMakeLists.txt  Generator.test.cpp
